tests/paczka1/small_fuzzy/25431952.err
Error in line 2: D3JAS9F A699 84,2
Error in line 7: cKd8Qp60 S572 74,1
